--- a/manifest.json
+++ b/manifest.json
@@ -10,12 +10,14 @@
     {
       "src": "Logo_Archinime.avif",
       "sizes": "192x192",
-      "type": "image/avif"
+      "type": "image/avif",
+      "purpose": "any maskable"
     },
     {
       "src": "Logo_Archinime.avif",
       "sizes": "512x512",
-      "type": "image/avif"
+      "type": "image/avif",
+      "purpose": "any"
     }
   ]
 }
