--- a/manifest.json
+++ b/manifest.json
@@ -10,14 +10,12 @@
     {
       "src": "Logo_Archinime.avif",
       "sizes": "192x192",
-      "type": "image/avif",
-      "purpose": "any maskable"
+      "type": "image/avif"
     },
     {
       "src": "Logo_Archinime.avif",
       "sizes": "512x512",
-      "type": "image/avif",
-      "purpose": "any"
+      "type": "image/avif"
     }
   ]
 }
